<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".games.end_game_screen.EndGameScreen"
        android:orientation="horizontal"
        android:background="@drawable/main_background_gradient">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:weightSum="100"
                  android:id="@+id/heading">
        <Button
                android:text="@string/games_str"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_btn_main" android:id="@+id/profile_btn"
                android:background="@drawable/button_profile_dr"
                android:fontFamily="@font/autour_one" android:textColor="@color/white"
                android:textAllCaps="false" android:singleLine="true"
                android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                android:shadowRadius="8"
                android:layout_gravity="center"
                android:layout_weight="25"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="1sp"
                android:textAlignment="center"
                android:onClick="goToGames"
        />


        <ImageView android:layout_width="0dp" android:layout_height="@dimen/heading"
                   android:src="@drawable/game_over_heading"
                   android:id="@+id/menu_heading"
                   android:layout_marginTop="-4dp"
                   android:layout_gravity="center"
                   android:contentDescription="@string/main_heading_str"
                   android:layout_weight="50"
        />


        <Button
                android:text="@string/restart_str"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_btn_main" android:id="@+id/menu_btn"
                android:background="@drawable/button_stat_dr"
                android:fontFamily="@font/autour_one" android:textColor="@color/white"
                android:textAllCaps="false" android:singleLine="true"
                android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                android:shadowRadius="8"
                android:layout_gravity="center"
                android:layout_weight="25"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeStepGranularity="2sp"
                android:textAlignment="center"
                android:onClick="restartGame"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@+id/heading"
                  android:layout_marginTop="8dp"
                  android:layout_centerHorizontal="true"
                  android:gravity="center"
                  android:orientation="vertical"
                  android:layout_above="@+id/exp">

        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/score_str"
                      android:textSize="@dimen/end_game_sp"
                      android:textColor="@color/white"
                      android:fontFamily="@font/autour_one"
                      android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                      android:shadowRadius="8"
                      android:id="@+id/score"
            />

        </LinearLayout>


    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/max_score_str"
                  android:textSize="@dimen/end_game_sp"
                  android:id="@+id/max_score"
                  android:textColor="@color/white"
                  android:fontFamily="@font/autour_one"
                  android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                  android:shadowRadius="8"
        />

        <ImageView android:layout_width="50dp" android:layout_height="50dp"
                   android:id="@+id/max_img_view"
        />

    </LinearLayout>


    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/day_average_str"
                  android:textSize="@dimen/end_game_sp"
                  android:textColor="@color/white"
                  android:fontFamily="@font/autour_one"
                  android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                  android:shadowRadius="8"
                  android:id="@+id/day_average"
        />

        <ImageView android:layout_width="50dp" android:layout_height="50dp"
                   android:id="@+id/day_img_view"
        />

    </LinearLayout>

    </LinearLayout>


    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_alignParentBottom="true"
                  android:layout_marginBottom="20dp"
                  android:orientation="horizontal"
                  android:weightSum="100"
                  android:gravity="center"
                  android:id="@+id/exp">

        <RelativeLayout android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="60">


            <ProgressBar android:layout_width="match_parent"
                         android:layout_height="@dimen/end_game_bar"
                         style="?android:progressBarStyleHorizontal"
                         android:indeterminate="false"
                         android:progressDrawable="@drawable/horizontal_progress_bar"
                         android:max="10000"
                         android:id="@+id/end_game_level_bar"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/profile_level_progress"
                      android:textSize="@dimen/main_btn_sp"
                      android:id="@+id/profile_exp_text"
                      android:gravity="center"
                      android:fontFamily="@font/cherry_cream_soda" android:textColor="#043752"
                      android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                      android:shadowRadius="8"
                      android:layout_centerHorizontal="true"
                      android:layout_centerVertical="true"
            />

        </RelativeLayout>


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/exp_str"
                  android:id="@+id/end_game_exp_text"
                  android:textSize="@dimen/end_game_sp"
                  android:textColor="@color/white"
                  android:fontFamily="@font/autour_one"
                  android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
                  android:shadowRadius="8"
                  android:textAlignment="center"

        />

    </LinearLayout>


</RelativeLayout>