<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PremShow"
        android:background="@drawable/main_background_gradient">


    <ImageView android:layout_width="wrap_content" android:layout_height="@dimen/heading"
               android:src="@drawable/prem_acc_heading"
               android:layout_marginTop="8dp"
               android:id="@+id/prem_show_heading"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/main_heading_str"
    />

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="horizontal"
                  android:weightSum="100"
                  android:layout_below="@+id/prem_show_heading"
                  android:layout_above="@+id/buy_prem_btn">

        <RelativeLayout android:layout_width="0dp" android:layout_height="match_parent"
                        android:layout_weight="40">

            <ImageView android:layout_width="@dimen/prem_view_dp" android:layout_height="@dimen/prem_view_dp"
                       android:src="@drawable/incon_prem_view"
                       android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        </RelativeLayout>


        <LinearLayout android:layout_width="0dp" android:layout_height="match_parent"
                      android:layout_weight="60"
                      android:orientation="vertical"
                      android:gravity="center"
                     >

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/remove_all_ads"
                      android:textSize="@dimen/prem_sp"
                      android:id="@+id/prem_label_1"
                      android:fontFamily="@font/autour_one"
                      android:textColor="@color/white" android:shadowColor="#868383" android:shadowDx="5"
                      android:shadowDy="5"
                      android:shadowRadius="8"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/unlock_special_icons"
                      android:textSize="@dimen/prem_sp"
                      android:id="@+id/prem_label_2"
                      android:fontFamily="@font/autour_one"
                      android:gravity="center"
                      android:textColor="@color/white" android:shadowColor="#868383" android:shadowDx="5"
                      android:shadowDy="5"
                      android:shadowRadius="8"/>

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/price_1d"
                      android:textSize="@dimen/prem_sp"
                      android:id="@+id/prem_label_3"
                      android:fontFamily="@font/autour_one"
                      android:textColor="@color/white" android:shadowColor="#868383" android:shadowDx="5"
                      android:shadowDy="5"
                      android:shadowRadius="8"
                      android:layout_marginTop="20dp"
            />


        </LinearLayout>


    </LinearLayout>


    <Button
            android:text="buy now"
            android:layout_width="@dimen/prem_view_dp"
            android:layout_alignParentBottom="true"
            android:layout_height="@dimen/height_btn_main" android:id="@+id/buy_prem_btn"
            android:layout_gravity="start"
            android:background="@drawable/button_green_left_dr"
            android:fontFamily="@font/autour_one" android:textColor="@color/white"
            android:textSize="@dimen/main_btn_sp"
            android:textAllCaps="false" android:singleLine="true"
            android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
            android:shadowRadius="8"
            android:layout_marginBottom="10dp"
    />


    <Button
            android:text="@string/back_btn_str"
            android:layout_width="@dimen/prem_view_dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_height="@dimen/height_btn_main" android:id="@+id/leave_prem_btn"
            android:layout_gravity="end"
            android:background="@drawable/button_ext_dr"
            android:fontFamily="@font/autour_one" android:textColor="@color/white"
            android:textSize="@dimen/main_btn_sp"
            android:textAllCaps="false" android:singleLine="true"
            android:shadowColor="#868383" android:shadowDx="5" android:shadowDy="5"
            android:shadowRadius="8"
            android:layout_marginBottom="10dp"
    />


</RelativeLayout>