<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Attention"
        android:background="@drawable/dark_screen_png"
        android:orientation="horizontal">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/tutorial"
              android:background="@drawable/f_n_game_num_dr"
              android:fontFamily="@font/autour_one"
              android:textColor="@color/white"
              android:gravity="center"
              android:textSize="@dimen/main_btn_sp"
              android:id="@+id/attention"
              android:layout_centerVertical="true"
              android:layout_centerHorizontal="true"
    />

    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_below="@+id/attention"
                  android:layout_centerHorizontal="true"
    >

        <Button
                android:layout_marginTop="10dp"
                android:text="@string/continue_str"
                android:ems="8"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height_btn_main" android:id="@+id/understand_btn"
                android:background="@drawable/btn_name_dr"
                android:fontFamily="@font/autour_one" android:textColor="@color/white"
                android:textSize="@dimen/main_btn_sp"
                android:textAllCaps="false" android:singleLine="true"
                android:elevation="10dp"
                android:onClick="contin"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/don_t_show_again_str"
                  android:textColor="@color/white"
                  android:textSize="@dimen/main_btn_sp"
                  android:layout_gravity="center_vertical"
                  android:layout_marginStart="20dp"
                  android:id="@+id/dont_show_txt"
        />

        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginStart="10dp"
                  android:background="@drawable/check_box_dr"
                  android:id="@+id/checkbox"
        />
    </LinearLayout>

</RelativeLayout>